--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@chakra-ui/react": "^3.8.0",
     "@emotion/react": "^11.14.0",
+    "@nanostores/react": "^0.8.4",
+    "nanostores": "^0.11.4",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
