--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/react": "^3.8.0",
     "@emotion/react": "^11.14.0",
     "@nanostores/react": "^0.8.4",
+    "@nanostores/router": "^0.16.1",
     "nanostores": "^0.11.4",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
