--- a/api/package.json
+++ b/api/package.json
@@ -6,9 +6,13 @@
     "dev": "ts-node src/index.ts"
   },
   "dependencies": {
+    "@node-rs/argon2": "^2.0.2",
     "@prisma/client": "6.3.1",
     "cors": "^2.8.5",
-    "express": "4.21.2"
+    "express": "4.21.2",
+    "i": "^0.3.7",
+    "npm": "^11.1.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/express": "5.0.0",
