--- a/api/package.json
+++ b/api/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node src/index.ts"
+    "dev": "ts-node src/index.ts",
+    "prisma:generate": "prisma generate"
   },
   "dependencies": {
     "@node-rs/argon2": "^2.0.2",
@@ -17,6 +18,7 @@
   "devDependencies": {
     "@types/express": "5.0.0",
     "@types/node": "22.13.1",
+    "@types/passport-local": "^1.0.38",
     "prisma": "6.3.1",
     "ts-node": "10.9.2",
     "typescript": "5.7.3"
