--- a/api/package.json
+++ b/api/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "@node-rs/argon2": "^2.0.2",
+    "@oslojs/crypto": "^1.0.1",
+    "@oslojs/encoding": "^1.1.0",
     "@prisma/client": "6.3.1",
     "cors": "^2.8.5",
     "express": "4.21.2",
@@ -15,6 +17,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "5.0.0",
     "@types/node": "22.13.1",
     "prisma": "6.3.1",
