--- a/api/package.json
+++ b/api/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node src/index.ts",
-    "prisma:generate": "prisma generate"
+    "dev": "ts-node src/index.ts"
   },
   "dependencies": {
     "@node-rs/argon2": "^2.0.2",
