--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@chakra-ui/react": "^3.8.0",
     "@emotion/react": "^11.14.0",
+    "@nanostores/persistent": "^0.10.2",
     "@nanostores/react": "^0.8.4",
     "@nanostores/router": "^0.16.1",
     "nanostores": "^0.11.4",
