--- a/api/scripts/requirements.txt
+++ b/api/scripts/requirements.txt
@@ -1,2 +1,3 @@
-numpy==1.24.3
-sentence_transformers
+torch>=1.11.0 --extra-index-url https://download.pytorch.org/whl/cpu
+sentence_transformers==2.2.2
+huggingface-hub>=0.19.0,<0.20.0
