Updated frontend_tests yaml

--- a/.github/workflows/frontend_tests.yml
+++ b/.github/workflows/frontend_tests.yml
@@ -33,5 +33,5 @@ jobs:
         with:
           working-directory: ./web
           build: pnpm build
-          start: pnpm start
+          start: pnpm preview
           browser: firefox
