--- a/.github/workflows/frontend_tests.yml
+++ b/.github/workflows/frontend_tests.yml
@@ -55,6 +55,7 @@ jobs:
       - name: Run Cypress Tests
         uses: cypress-io/github-action@v6
         with:
-          build: cd ./web && pnpm build
-          start: cd ./web && pnpm preview, cd ../api && pnpm dev
+          working-directory: ./web
+          build: pnpm build
+          start: pnpm preview, cd ../api && pnpm dev
           browser: firefox
