Edited docker image for testing

--- a/.github/workflows/frontend_tests.yml
+++ b/.github/workflows/frontend_tests.yml
@@ -9,7 +9,9 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    container: node:23-bookworm-slim
+    container:
+      image: cypress/browsers:22.14.0
+      options: --user 1001
 
     services:
       postgres:
