--- a/.github/workflows/frontend_tests.yml
+++ b/.github/workflows/frontend_tests.yml
@@ -23,6 +23,8 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
+        ports:
+          - 5432:5432
 
     steps:
       - name: Checkout Repository
@@ -46,7 +48,7 @@ jobs:
         working-directory: ./api
         run: pnpm prisma migrate reset --force
         env:
-          DATABASE_URL: postgresql://postgres:postgres@localhost:5432/tests
+          DATABASE_URL: "postgresql://postgres:postgres@localhost:5432/postgres"
 
       - name: Install Frontend Dependencies
         working-directory: ./web
