--- a/.github/workflows/frontend_tests.yml
+++ b/.github/workflows/frontend_tests.yml
@@ -56,6 +56,8 @@ jobs:
       
       - name: Start Backend Server
         working-directory: ./api
+        env:
+          DATABASE_URL: "postgresql://postgres:postgres@postgres:5432/postgres"
         run: pnpm dev &
       
       - name: Run Cypress Tests
