--- a/.github/workflows/frontend_tests.yml
+++ b/.github/workflows/frontend_tests.yml
@@ -64,6 +64,7 @@ jobs:
         uses: cypress-io/github-action@v6
         with:
           working-directory: ./web
+          env: VITE_API_URL=http://localhost:3000
           build: pnpm build
           start: pnpm preview
           browser: firefox
