--- a/web/package.json
+++ b/web/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint --fix \"src/**/*.{js,ts,jsx,tsx}\"",
     "preview": "vite preview",
     "prettier": "prettier --write \"src/**/*.{js,ts,jsx,tsx}\" --config \".prettierrc.json\"",
-    "cy:open": "cypress open"
+    "cy:open": "cypress open",
+    "cy:run": "cypress run"
   },
   "dependencies": {
     "@chakra-ui/form-control": "^2.2.0",
