--- a/api/package.json
+++ b/api/package.json
@@ -2,6 +2,7 @@
   "name": "express",
   "version": "1.0.0",
   "license": "MIT",
+  "type": "module",
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "tsc -b",
