--- a/api/package.json
+++ b/api/package.json
@@ -2,12 +2,9 @@
   "name": "express",
   "version": "1.0.0",
   "license": "MIT",
-  "type": "module",
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "build": "tsc && pnpm run copy-assets",
-    "copy-assets": "copyfiles -u 0 \"scripts/**/*\" dist/",
-    "start": "node dist/src/index.js",
+    "build": "tsc -b",
     "test": "API_PORT=0 pnpm vitest"
   },
   "dependencies": {
@@ -29,7 +26,6 @@
     "@types/node": "22.13.1",
     "@types/node-cron": "^3.0.11",
     "@types/supertest": "^6.0.2",
-    "copyfiles": "^2.4.1",
     "prisma": "6.5.0",
     "prisma-mock-vitest": "^0.1.6",
     "supertest": "^7.0.0",
