--- a/web/package.json
+++ b/web/package.json
@@ -26,6 +26,7 @@
     "lucide-react": "^0.476.0",
     "nanostores": "^0.11.4",
     "next-themes": "^0.4.4",
+    "pdfjs-dist": "^5.1.91",
     "pluralize": "^8.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
