--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "express": "4.21.2",
     "node-cron": "^3.0.3",
+    "uuid": "^11.1.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
@@ -29,6 +30,7 @@
     "@types/node": "22.13.1",
     "@types/node-cron": "^3.0.11",
     "@types/supertest": "^6.0.2",
+    "@types/uuid": "^10.0.0",
     "copyfiles": "^2.4.1",
     "prisma": "6.5.0",
     "prisma-mock-vitest": "^0.1.6",
