--- a/api/package.json
+++ b/api/package.json
@@ -7,7 +7,7 @@
     "dev": "tsx watch src/index.ts",
     "build": "tsc && pnpm run copy-assets",
     "copy-assets": "copyfiles -u 0 \"scripts/**/*\" dist/",
-    "start": "node dist/src/index.js",
+    "start": "tsx src/index.ts",   
     "test": "cross-env API_PORT=0 vitest"
   },
   "dependencies": {
