added personal branch for workflow triggers for testing

--- a/.github/workflows/api.container.yml
+++ b/.github/workflows/api.container.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - master
+      - dockerize_ak
     paths:
       - 'api/**'
       - '.github/workflows/api.container.yml'
