--- a/api/scripts/requirements.txt
+++ b/api/scripts/requirements.txt
@@ -1,3 +1,5 @@
-sentence_transformers==2.2.2
+--extra-index-url https://download.pytorch.org/whl/cpu
+torch==2.0.1+cpu
+sentence-transformers==2.2.2
 huggingface-hub==0.13.4
 transformers==4.26.0
