--- a/api/dockerfile
+++ b/api/dockerfile
@@ -33,6 +33,9 @@ RUN pip install --upgrade pip && \
 # Copy application code
 COPY . .
 
+# Explicitly set production environment
+ENV NODE_ENV=production
+
 # Generate Prisma client and build
 RUN pnpm prisma generate && pnpm build
 
