--- a/api/package.json
+++ b/api/package.json
@@ -7,7 +7,7 @@
     "dev": "tsx watch src/index.ts",
     "build": "tsc && pnpm run copy-assets",
     "copy-assets": "copyfiles -u 0 \"scripts/**/*\" dist/",
-    "start": "tsx src/index.ts",   
+    "start": "tsx src/index.ts",
     "test": "cross-env API_PORT=0 vitest"
   },
   "dependencies": {
@@ -17,6 +17,7 @@
     "@prisma/client": "6.5.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "4.21.2",
     "node-cron": "^3.0.3",
     "zod": "^3.24.2"
