--- a/crave-app-deployment/docker-compose.yml
+++ b/crave-app-deployment/docker-compose.yml
@@ -19,6 +19,8 @@ services:
 
   web:
     image: ghcr.io/cs421sp25-homework/team-05-web:latest
+    environment:
+      - VITE_API_URL=http://api:3000
     ports:
       - "8080:80"
     depends_on:
