--- a/api/.dockerignore
+++ b/api/.dockerignore
@@ -3,6 +3,9 @@
 
 # Ignore node modules
 **/node_modules
+node_modules
+/node_modules
+node_modules/
 **/venv
 
 # Ignore logs
@@ -17,11 +20,16 @@ npm-debug.log*
 # Ignore build output directories
 /dist
 /out
-/build
+dist
+build
+coverage
+.vscode
+.idea
 
 # Ignore temporary files
 *.tmp
 *.temp
+*.tsbuildinfo
 
 # Ignore configuration files that are not needed
 .dockerignore
