testing the new yml file

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,6 +6,11 @@ on:
       - master
       - dev
       - seeding_aa
+  push:
+    branches:
+      - master
+      - dev
+      - seeding_aa
 
 jobs:
   test:
