--- a/api/package.json
+++ b/api/package.json
@@ -32,6 +32,7 @@
     "@types/node-cron": "^3.0.11",
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^10.0.0",
+    "@vitest/coverage-v8": "^3.1.2",
     "copyfiles": "^2.4.1",
     "cross-env": "^7.0.3",
     "prisma": "6.5.0",
