added some tests

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -39,4 +39,4 @@ jobs:
       
       - name: Run Vitest Tests
         working-directory: ./api
-        run: pnpm vitest run --coverage
+        run: pnpm vitest run
