--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
+    "dotenv-flow": "^4.1.0",
     "express": "4.21.2",
     "node-cron": "^3.0.3",
     "uuid": "^11.1.0",
@@ -35,6 +36,7 @@
     "@vitest/coverage-v8": "^3.1.2",
     "copyfiles": "^2.4.1",
     "cross-env": "^7.0.3",
+    "dotenv-cli": "^8.0.0",
     "prisma": "6.5.0",
     "prisma-mock-vitest": "^0.1.6",
     "supertest": "^7.0.0",
