--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,8 +3,7 @@ name: Unit Tests
 on:
   pull_request:
     branches:
-      - master
-      - dev
+      - never
   push:
     branches:
       - master
